--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -10,34 +10,31 @@
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "import os\n",
-    "from nltk.tokenize import sent_tokenize"
+    "from nltk.tokenize import sent_tokenize\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ".....\n"
+    "Sentiment analysis. Analysis is performed for each sentence and the sentiment scores kept in lists. Sentiment scores are calculated by averaging the sentiment scores for all sentences."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'neg': 0.029, 'neu': 0.888, 'pos': 0.083, 'compound': 1.0}\n",
-      "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
-      "{'neg': 0.102, 'neu': 0.77, 'pos': 0.128, 'compound': 1.0}\n",
-      "{'neg': 0.092, 'neu': 0.776, 'pos': 0.133, 'compound': 1.0}\n",
-      "{'neg': 0.029, 'neu': 0.869, 'pos': 0.103, 'compound': 0.9999}\n",
-      "{'neg': 0.092, 'neu': 0.795, 'pos': 0.113, 'compound': 0.9993}\n",
-      "{'neg': 0.054, 'neu': 0.8, 'pos': 0.146, 'compound': 1.0}\n",
-      "{'neg': 0.102, 'neu': 0.711, 'pos': 0.188, 'compound': 1.0}\n",
-      "{'neg': 0.106, 'neu': 0.745, 'pos': 0.149, 'compound': 1.0}\n"
+      "8\n",
+      "Index(['00053.txt', '00055.txt', '00054.txt', '00056.txt', '00057.txt',\n",
+      "       '00059.txt', '00058.txt', '00060.txt'],\n",
+      "      dtype='object', name='filename')\n",
+      "8 8 8 8\n"
      ]
     }
    ],
@@ -45,17 +42,58 @@
     "def return_sentiment_scores(sentence):\n",
     "    # return just the sentiment scores\n",
     "    snt = analyser.polarity_scores(sentence)\n",
-    "    print(snt)    \n",
+    "    return snt\n",
     "\n",
     "def sentiment_analysis(directory):\n",
-    "    # returns the sentiment of every sentence in the given amount of positive and negative reviews\n",
+    "    # returns the sentiment of every book in the directory\n",
+    "    data = pd.read_csv('data/output/tard.csv', index_col=0)\n",
+    "    print(len(data.index))\n",
+    "    print(data.index)\n",
+    "    pos_list = []\n",
+    "    neg_list = []\n",
+    "    neu_list = []\n",
+    "    comp_list = []\n",
+    "    \n",
+    "    # for every book\n",
     "    for filename in os.listdir(directory):\n",
+    "        \n",
+    "        sub_pos_list = []\n",
+    "        sub_neg_list = []\n",
+    "        sub_neu_list = []\n",
+    "        sub_comp_list = []\n",
+    "        \n",
+    "        # if file is a textfile\n",
     "        if filename.endswith(\".txt\"):\n",
     "            text = open(os.path.join(directory, filename), 'r', errors='replace')\n",
-    "            return_sentiment_scores(text.read())\n",
-    "#             print(sent_tokenize(text.read())\n",
-    "            #sentiment_dict = return_sentiment_scores(concat2(text_in_sents))\n",
-    "        \n",
+    "            # for every line in the text\n",
+    "            for line in text.readlines():\n",
+    "                scores = return_sentiment_scores(line)\n",
+    "                # save sentiment scores \n",
+    "                sub_neg_list.append(scores['neg'])\n",
+    "                sub_neu_list.append(scores['neu'])\n",
+    "                sub_pos_list.append(scores['pos'])\n",
+    "                sub_comp_list.append(scores['compound'])\n",
+    "            \n",
+    "            # then save average sentiment scores for each book\n",
+    "            neg_list.append((sum(sub_neg_list) / float(len(sub_neg_list))))\n",
+    "            pos_list.append((sum(sub_pos_list) / float(len(sub_pos_list))))\n",
+    "            neu_list.append((sum(sub_neu_list) / float(len(sub_neu_list))))\n",
+    "            comp_list.append((sum(sub_comp_list) / float(len(sub_comp_list))))\n",
+    "            \n",
+    "    \n",
+    "    neg = pd.Series(neg_list)\n",
+    "    pos = pd.Series(pos_list)\n",
+    "    neu = pd.Series(neu_list)\n",
+    "    com = pd.Series(comp_list)\n",
+    "\n",
+    "    print(len(neg), len(pos), len(neu), len(com))\n",
+    "    data['neg score'] = neg.values\n",
+    "    data['pos score'] = pos.values\n",
+    "    data['neu score'] = neu.values\n",
+    "    data['comp score'] = com.values\n",
+    "\n",
+    "    data.to_csv('data/output/tard.csv')\n",
+    "    \n",
     "analyser = SentimentIntensityAnalyzer()                    \n",
     "sentiment_analysis('data/output/')"
    ]
