--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -15,12 +15,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "First we create an empty CSV file with the colums to fill."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_empty_csv(filename):\n",
+    "    csvfile = open('data/output/{0}.csv'.format(filename), \"w\")\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    columns = ['filename', 'title', 'author', 'release year', 'pos score', 'neg score', 'neu score', 'comp score']\n",
+    "    writer.writerow(columns)\n",
+    "\n",
+    "create_empty_csv('tard')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We want to be able to extract the filename, title, author and release year from every book and save it to a CSV file. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -42,11 +64,9 @@
     "def obtain_data_from_books(directory):\n",
     "    \n",
     "    # initiate CSV file \n",
-    "    csvfile = open('data/output/tard.csv', \"w\")\n",
+    "    csvfile = open('data/output/tard.csv', \"a\")\n",
     "    writer = csv.writer(csvfile)\n",
-    "    columns = ['filename', 'title', 'author', 'release year']\n",
-    "    writer.writerow(columns)\n",
-    "    \n",
+    "  \n",
     "    for book in os.listdir(directory):\n",
     "        if not book.startswith(\".\"):\n",
     "            with open(directory + book, errors='replace') as f:\n",
@@ -92,9 +112,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".DS_Store\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'content' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-80-d47242efd059>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mdirectory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data/test/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0moutputdir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data/output/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mremove_unwanted_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-80-d47242efd059>\u001b[0m in \u001b[0;36mremove_unwanted_text\u001b[0;34m(directory, outputdir)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mstart_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mstop_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'content' referenced before assignment"
+     ]
+    }
+   ],
    "source": [
     "def remove_unwanted_text(directory, outputdir):\n",
     "\n",
@@ -107,6 +147,7 @@
     "        if not book.startswith(\".\"):\n",
     "            with open(directory + book, errors='replace') as f:\n",
     "                content = f.readlines()\n",
+    "                \n",
     "        start_index = 1\n",
     "        stop_index = len(content) - 1\n",
     "        \n",
