use variable dataset-location

--- a/src/SentimentAnalysis.ipynb
+++ b/src/SentimentAnalysis.ipynb
@@ -2,16 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "import os\n",
     "from nltk.tokenize import sent_tokenize\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import config\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.DS_Store', 'output', 'test']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(config.dataset_dir)"
    ]
   },
   {
@@ -23,17 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "Index(['00053.txt', '00055.txt', '00054.txt', '00056.txt', '00057.txt',\n",
-      "       '00059.txt', '00058.txt', '00060.txt'],\n",
-      "      dtype='object', name='filename')\n",
+      "0\n",
+      "Index([], dtype='object', name='filename')\n",
       "8 8 8 8\n"
      ]
     }
@@ -46,7 +72,7 @@
     "\n",
     "def sentiment_analysis(directory):\n",
     "    # returns the sentiment of every book in the directory\n",
-    "    data = pd.read_csv('data/output/tard.csv', index_col=0)\n",
+    "    data = pd.read_csv(config.dataset_dir + 'output/tard.csv', index_col=0)\n",
     "    print(len(data.index))\n",
     "    print(data.index)\n",
     "    pos_list = []\n",
@@ -92,18 +118,16 @@
     "    data['neu score'] = neu.values\n",
     "    data['comp score'] = com.values\n",
     "\n",
-    "    data.to_csv('data/output/tard.csv')\n",
+    "    data.to_csv(config.dataset_dir + 'output/tard.csv')\n",
     "    \n",
     "analyser = SentimentIntensityAnalyzer()                    \n",
-    "sentiment_analysis('data/output/')"
+    "sentiment_analysis(config.dataset_dir + 'output/')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
