--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -80,13 +80,14 @@
     "            neu_list.append((sum(sub_neu_list) / float(len(sub_neu_list))))\n",
     "            comp_list.append((sum(sub_comp_list) / float(len(sub_comp_list))))\n",
     "            \n",
-    "    \n",
+    "    # convert scores to pandas compatible list\n",
     "    neg = pd.Series(neg_list)\n",
     "    pos = pd.Series(pos_list)\n",
     "    neu = pd.Series(neu_list)\n",
     "    com = pd.Series(comp_list)\n",
     "\n",
     "    print(len(neg), len(pos), len(neu), len(com))\n",
+    "    # fill the right columns with the right data\n",
     "    data['neg score'] = neg.values\n",
     "    data['pos score'] = pos.values\n",
     "    data['neu score'] = neu.values\n",
