--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -772,18 +772,6 @@
      "output_type": "stream",
      "text": [
       ".DS_Store\n"
-     ]
-    },
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'content' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-80-d47242efd059>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0mdirectory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data/test/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0moutputdir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"data/output/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mremove_unwanted_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutputdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-80-d47242efd059>\u001b[0m in \u001b[0;36mremove_unwanted_text\u001b[0;34m(directory, outputdir)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0mstart_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m         \u001b[0mstop_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'content' referenced before assignment"
      ]
     }
    ],
@@ -800,29 +788,26 @@
     "            with open(directory + book, errors='replace') as f:\n",
     "                content = f.readlines()\n",
     "                \n",
-    "        start_index = 1\n",
-    "        stop_index = len(content) - 1\n",
-    "        \n",
-    "        for line in range(len(content)):\n",
-    "        \n",
-    "          if any(item in content[line] for item in start_list):\n",
-    "            start_index = line + 1\n",
-    "          #if stop1 or stop2 or stop3 in content[line]:\n",
-    "          if any(item in content[line] for item in stop_list):\n",
-    "            stop_index = line - 2\n",
-    "            \n",
-    "        book_content = content[start_index:stop_index]\n",
-    "        outfile = open(outputdir + '/' + book, 'w')\n",
-    "        outfile.writelines(book_content)\n",
-    "        outfile.close()\n",
+    "                start_index = 1\n",
+    "                stop_index = len(content) - 1\n",
     "\n",
-    "    end_time = time.clock()\n",
-    "    total_time = end_time - start_time\n",
-    "    print (\"The total time: \", total_time)\n",
+    "                for line in range(len(content)):\n",
+    "\n",
+    "                    if any(item in content[line] for item in start_list):\n",
+    "                        start_index = line + 1\n",
+    "                    #if stop1 or stop2 or stop3 in content[line]:\n",
+    "                    if any(item in content[line] for item in stop_list):\n",
+    "                        stop_index = line - 2\n",
+    "\n",
+    "                book_content = content[start_index:stop_index]\n",
+    "                outfile = open(outputdir + '/' + book, 'w')\n",
+    "                outfile.writelines(book_content)\n",
+    "                outfile.close()\n",
+    "        \n",
     "\n",
     "directory = \"data/test/\"\n",
     "outputdir = \"data/output/\"\n",
-    "# remove_unwanted_text(directory, outputdir)\n",
+    "remove_unwanted_text(directory, outputdir)\n",
     "   "
    ]
   },
