--- a/src/dbpedia.ipynb
+++ b/src/dbpedia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -150,7 +150,7 @@
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "{'link': [], 'vars': ['s', 'author']}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -194,7 +194,7 @@
        "dict_keys(['distinct', 'ordered', 'bindings'])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +255,7 @@
        "   'value': 'http://dbpedia.org/resource/Beyond_This_Horizon'}}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "   'value': 'http://dbpedia.org/resource/The_Wonderful_Wizard_of_Oz'}}]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,17 +426,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def author_info(name='L._Frank_Baum'):\n",
+    "    query = \"\"\"\n",
+    "PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
+    "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
+    "PREFIX dbpedia: <http://dbpedia.org/resource/>\n",
+    "PREFIX dbo: <http://dbpedia.org/ontology/>\n",
+    "PREFIX dbpedia-owl: <http://dbpedia.org/ontology/>\n",
+    "\n",
+    "SELECT ?author\n",
+    "WHERE {\n",
+    "    ?author dbo:child ?child\n",
+    "    FILTER regex(str(?child), \"%s\") .\n",
+    "}\n",
+    "LIMIT 10\n",
+    "\"\"\" % name\n",
+    "    return search(query)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'head': {'link': [], 'vars': ['author']},\n",
+       " 'results': {'bindings': [{'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Esther_Edwards_Burr'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Paul_de_Leeuw'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Sarathi_Baba'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Thomas_Boleyn,_1st_Earl_of_Wiltshire'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Nigel_Powers'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Lewis_Elton'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Benzion_Netanyahu'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Lee_Hoi-chuen'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Joe_Keaton'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/Myra_Keaton'}}],\n",
+       "  'distinct': False,\n",
+       "  'ordered': True}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "author_info('a')"
+   ]
   },
   {
    "cell_type": "code",
